Ignore unit tests until some have been set up

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,8 +38,8 @@ jobs:
         run: pip install poetry
       - name: Install dependencies
         run: poetry install        
-      - name: Run unit tests
-        run: poetry run pytest src/tests
+      # - name: Run unit tests
+      #   run: poetry run pytest src/tests
       - name: Setup chromedriver
         uses: nanasess/setup-chromedriver@master
       - run: |
