--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python-dotenv = "^1.0.1"
 getenv = "^0.2.0"
 psycopg2-binary = "^2.9.10"
 requests = "^2.32.3"
+bibtexparser = "^1.4.2"
 
 
 [tool.poetry.group.dev.dependencies]
