--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,7 +1,7 @@
 name: CI
 
 env:
-  DATABASE_URL: ${{ secrets.db_url }}
+  DATABASE_URL: "postgresql://postgres:postgres@localhost:5432/postgres"
   TEST_ENV: true
   SECRET_KEY: ${{ secrets.sekret }}
 
@@ -37,7 +37,9 @@ jobs:
       - name: Install Poetry
         run: pip install poetry
       - name: Install dependencies
-        run: poetry install        
+        run: poetry install
+      - name: Run db_helper.py
+        run: python src/db_helper.py       
       - name: Run unit tests
         run: poetry run pytest src/unit_tests
       - name: Setup chromedriver
