--- a/.coveragerc
+++ b/.coveragerc
@@ -1,3 +1,11 @@
 [run]
 source = src
 omit = src/index.py, src/unit_tests/**, src/app.py, __init__.py, src/db_helper.py, src/config.py
+[report]
+exclude_also = 
+    def add_reference
+    def fetch_reference
+    def fetch_reference_keys
+    def delete_reference
+    def edit_reference
+    def check_unique_reference_key
