--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -53,8 +53,8 @@ jobs:
       - name: Pylint
         run: poetry run pylint src
       - name: Coverage report
-        run: poetry run coverage xml
-      - name: Coverage report to Codecov
-        uses: codecov/codecov-action@v4
+        run: poetry run pytest --cov=src --cov-report=xml
+      - name: Upload results to Codecov
+        uses: codecov/codecov-action@v5
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
