--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -52,8 +52,10 @@ jobs:
         run: bash run_robot_tests.sh
       - name: Pylint
         run: poetry run pylint src
+       - name: Run coverage tests
+        run: poetry run coverage run --branch -m pytest
       - name: Coverage report
-        run: poetry run pytest --cov=src --cov-report=xml
+        run: poetry run coverage xml    
       - name: Upload results to Codecov
         uses: codecov/codecov-action@v5
         env:
