Correct changed function name for saving reference in coverage config file

--- a/.coveragerc
+++ b/.coveragerc
@@ -3,7 +3,7 @@ source = src
 omit = src/index.py, src/unit_tests/**, src/app.py, __init__.py, src/db_helper.py, src/config.py
 [report]
 exclude_also = 
-    def add_reference
+    def save_reference
     def fetch_references
     def fetch_one_reference
     def fetch_reference_keys
