--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,9 +7,9 @@ env:
 
 on:
   push:
-    branches: [main, dev]
+    branches: [main, dev, filter]
   pull_request:
-    branches: [main, dev]
+    branches: [main, dev, filter]
 
 jobs:
   build:
